--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ django-simple-captcha==0.5.13
 fontawesome-free==5.15.2
 idna==2.10
 Pillow==8.1.0
-python-akismet==0.4.2
 pytz==2020.5
 requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.3
+uWSGI==2.0.19.1
